# cmake_practice

./: CMakeLists.txt  README.md
src/: hello.c
